# AgentM

./: .env.example  .gitattributes  .gitignore  .mcp.json  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  README.md  ab100_status.sh  config.toml.example  core-manifest.yaml  decisions.md  project-index.yaml  pyproject.toml  run_ab100.sh  run_case3_chained.sh  run_narrow_chained.sh
contrib/channels/: README.md  pyproject.toml
contrib/channels-clients/feishu/: README.md  pyproject.toml
contrib/channels-clients/feishu/tests/: test_adapter_unit.py  test_cli_smoke.py
contrib/channels-clients/terminal/: pyproject.toml
contrib/channels-clients/terminal/tests/: test_cli_smoke.py  test_subprocess_e2e.py  test_textual_ui_smoke.py
contrib/channels-clients/worker/: README.md  pyproject.toml
contrib/channels-clients/worker/tests/: test_cli_smoke.py  test_peer_send_atom.py
contrib/channels/feishu/: README.md  pyproject.toml
contrib/channels/feishu/tests/: test_approval_bridge.py  test_chat_session_map.py  test_gateway_e2e.py  test_stub_chat_source.py
contrib/channels/src/agentm_channels/: __init__.py  approval.py  base.py  bus.py  cli.py  client.py  client_cli.py  gateway.py  manager.py  peer.py  registry.py  server.py  session_bindings.py  wire_bridge.py  worker_registry.py
contrib/channels/tests/: test_a2a_routing.py  test_approval.py  test_atom_command.py  test_bus.py  test_chat_session_map.py  test_command_router.py  test_gateway_e2e.py  test_manager_allow_from.py  test_registry_and_manager.py  test_session_bindings.py  test_terminal_channel.py  test_wire_bridge_buttons.py  test_wire_bridge_security.py  test_worker_routing.py
contrib/channels/tests/cli/: test_bind_e2e.py  test_bind_flag_parsing.py  test_env_vars_resolve_at_runtime.py  test_env_vars_visible.py  test_peercred_authenticator.py  test_ws_bind_flag_parsing.py
contrib/channels/tests/outbox/: conftest.py  test_batch_catchup.py  test_dead_letter.py  test_durability.py  test_inbox_idempotency.py  test_lease_expiry.py  test_policy.py  test_sqlite_basic.py
contrib/channels/tests/server/: conftest.py  test_auth_failure.py  test_catchup_batching.py  test_dead_letter.py  test_durability_restart.py  test_echo.py  test_handshake.py  test_slow_consumer.py
contrib/channels/tests/transport/: conftest.py  test_websocket_bind_with_peercred_rejected.py  test_websocket_echo.py  test_websocket_redelivery.py  test_websocket_token_auth.py
contrib/channels/tests/wire/: test_envelope.py  test_framing.py  test_kinds.py
contrib/evals/: .gitignore  README.md  bench.py  pyproject.toml
contrib/evals/aftraj/: eval_auditor.py  eval_grounding.py
contrib/evals/benchmarks/: __init__.py  base.py  harbor.py  swebench.py  terminal_bench.py
contrib/evals/longcli/: README.md  build.sh  run_batch.sh  setup_images.sh  skaffold.yaml.tmpl
contrib/evals/rescue_window/: DESIGN.md  README.md  The_Rescue_Window_Research_Memo_v0.2_CN.md  doc.md  pyproject.toml
contrib/evals/src/agentm_eval/: __init__.py  cli.py  experiment.py  registry.py  result.py
contrib/evals/tau2/: README.md
contrib/extensions/agentenv/: README.md  pyproject.toml
contrib/extensions/agentenv/tests/: test_entrypoint_plugin.py  test_install_selection.py
contrib/extensions/llmharness/: .gitignore  CLAUDE.md  README.md  project-index.yaml  pyproject.toml
contrib/extensions/llmharness/docs/: 01-architecture.md  02-schemas.md  03-distill-recipe.md  04-extending.md  05-profiles-and-prompts.md  06-case-aggregation.md  07-prefix-replay.md  08-running-modes.md  09-extractor-strategy-iteration.md  10-context-index-proposal.md
contrib/extensions/llmharness/scripts/: README.md  audit-graph.py  extractor-iter.sh  migrate_v3_to_v4_evid_fold.py  rerun_extractor.py  upload_cases_to_blob.py
contrib/extensions/mcp_bridge/: README.md  __init__.py  bridge.py  client.py  manifest.py  pyproject.toml  tool.py
contrib/extensions/policy/: pyproject.toml
contrib/extensions/trajectory_index/: README.md  SCHEMA-readwrite.md  SCHEMA.md  pyproject.toml
contrib/gateway-peers/feishu/: README.md  pyproject.toml
contrib/gateway-peers/terminal/: README.md  pyproject.toml
contrib/gateway-peers/weixin/: README.md  pyproject.toml
contrib/scenarios/devloop/: README.md  pyproject.toml
contrib/scenarios/harbor/: README.md  base.yaml  harbor-arl.yaml  pyproject.toml  scenario.yaml
contrib/scenarios/paper_review/: README.md  pyproject.toml
contrib/scenarios/rca/: README.md  _VARIANTS.md  fpg_profile.toml  hypothesis_tools.py  manifest.baseline-endpoint-coverage.yaml  manifest.baseline.briefed.yaml  manifest.baseline.yaml  manifest.goal-checker.yaml  manifest.goal-derivation.yaml  manifest.harness.live.yaml  manifest.harness.sync.extractor5.yaml  manifest.harness.sync.opinions.yaml  manifest.harness.sync.opinions10.yaml  manifest.harness.sync.yaml  manifest.harness.yaml  manifest.hfsm.yaml  manifest.yaml  orchestrator_setup.py  pyproject.toml
contrib/scenarios/rca_hfsm/: README.md  manifest.yaml  pyproject.toml
contrib/scenarios/terminal_bench/: adapt.py  manifest.arl.yaml  manifest.arl_adapt.yaml  manifest.arl_auditor.yaml  manifest.arl_full.yaml  manifest.arl_goal.yaml  manifest.arl_harness.yaml  manifest.arl_harness_methgen.yaml  manifest.arl_harness_minimal.yaml  manifest.arl_task.yaml  manifest.goal_checker.yaml  manifest.goal_deriver.yaml  manifest.yaml  pyproject.toml
scenarios/llmharness/: CLAUDE.md  project-index.yaml  pyproject.toml
scenarios/llmharness/.claude-plugin/: plugin.json
scenarios/llmharness/hooks/: hooks.json
scenarios/llmharness/scripts/: ingest_hook.sh  inject_hook.sh  install.sh  tick_worker.sh
scenarios/llmharness/tests/: test_smoke.py  test_two_phase_audit_integration.py
scenarios/rca/: README.md  duckdb_sql.py  manifest.yaml  orchestrator_setup.py  pyproject.toml
scenarios/rca/agents/: deep_analyze.md  scout.md  verify.md
scenarios/rca/eval/: config.yaml
scenarios/rca/prompts/: orchestrator.md
scenarios/rca/tests/: conftest.py  test_extensions.py  test_observability_tools.py  test_stores.py
(+3068 files in other folders)
