[project]
name = "agentm"
version = "0.2.4"
description = "AgentM - an agent framework"
readme = "README.md"
authors = [{ name = "Aoyang Fang", email = "aoyangfang@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "anthropic>=0.86.0",
    "openai>=1.50.0",
    "python-frontmatter>=1.1.0",
    "pathspec>=1.0.4",
    "typer>=0.25.1",
    "python-dotenv>=1.0",
    # ``tomllib`` is read-only stdlib; ``tomli-w`` is the writer used by
    # ``agentm onboard`` to merge model profiles into ``config.toml`` while
    # preserving existing tables.
    "tomli-w>=1.0",
    # Substrate dependency: the ``observability`` atom writes per-session
    # OTLP/JSON ndjson via the SDK's standard processors + encoders. The
    # ``otlp_export`` atom (opt-in) additionally fans spans + logs out
    # over OTLP/gRPC or OTLP/HTTP-protobuf to a remote collector — picks
    # up standard ``OTEL_EXPORTER_OTLP_*`` env vars.
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp>=1.30.0",
    # Backs the ``live_inspector`` contrib atom — a WebSocket server that
    # streams session events to an external UI (aegis-ui). Browsers cannot
    # speak raw TCP, so WS is the load-bearing transport choice;
    # ``websockets`` is pure-Python, ~70KB, and has no transitive deps.
    "websockets>=12.0",
    "loguru>=0.7",
    "tiktoken>=0.12.0",
]

[project.optional-dependencies]
# Pulls in the ARL agent-env SDK so the builtin ``operations_agent_env`` atom
# can create sandbox sessions. Install with ``uv sync --extra agent-env``
# (workspace) or ``pip install agentm[agent-env]``.
agent-env = [
    "arl-env>=0.17.0",
]
eval = [
    "agentm-rescue-window",
    "duckdb>=1.5.2",
    # Fault-propagation-graph schema: the verifier natively emits
    # ground-truth Scenario files in this format (fpg_scenario.json).
    "fpg>=0.1.0",
    # The verifier's hop/judge scenarios mount rca.default.duckdb_sql.
    "rca-scenario",
]
harbor = [
    "agentm-harbor>=0.1.0",
]
llmharness = ["llmharness"]
mcp = ["agentm-mcp-bridge"]
all-contrib = [
    "llmharness",
    "agentm-mcp-bridge",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "mypy>=1.0",
    "ruff>=0.4",
    "types-pyyaml>=6.0.12.20250915",
    "types-tqdm>=4.66.0.20240417",
]

[project.scripts]
agentm = "agentm:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.workspace]
# Explicitly list nested projects under contrib/. Other contrib/scenarios/*
# entries are pure manifests with no pyproject.toml and must NOT be picked
# up as workspace members.
members = [
    "contrib/evals/rescue_window",
    "contrib/extensions/llmharness",
    "contrib/extensions/mcp_bridge",
    "contrib/extensions/trajectory_index",
    "contrib/scenarios/harbor",
    "contrib/scenarios/rca",
    "contrib/gateway-peers/feishu",
    "contrib/gateway-peers/weixin",
]

# Resolve the agent-env plugin to the in-workspace member (editable) for dev;
# a published wheel takes over transparently outside the workspace.
[tool.uv.sources]
fpg = { git = "https://github.com/Lincyaw/fpg-convention" }
llmharness = { workspace = true }
agentm-rescue-window = { workspace = true }
agentm-mcp-bridge = { workspace = true }
agentm-harbor = { workspace = true }
rca-scenario = { workspace = true }
trajectory-index = { workspace = true }
agentm = { workspace = true }

[tool.pytest.ini_options]
# UI tests exercise the Textual TUI; they pass but don't map to any
# fail-stop core position (per CLAUDE.md "Testing Philosophy" §1). Run
# them explicitly with ``pytest -m ui`` when touching the TUI.
markers = [
    "ui: tests for the Textual TUI rendering layer",
    "slow: tests that may run for many minutes (real-LLM E2E)",
    "requires_api_key: tests that hit a real LLM provider; skipped without env",
    "smoke: wiring/happy-path tests (manifest-load, atoms-install, yaml-parse) that don't gate on a fail-stop position; included by default, filter out with `-m 'not smoke'`",
]
# Nested workspace projects own their own tests/ trees and pyproject. The
# top-level pytest must not recurse into them — both define a ``tests``
# package and the import paths collide.
testpaths = ["tests"]
addopts = "-m 'not ui'"
norecursedirs = ["*.egg", ".*", "_darcs", "build", "CVS", "dist", "node_modules", "venv", "{arch}", "runs", "jobs"]

[tool.ruff.lint]
# Default rule set (E/F) plus a guard against silently-swallowed exceptions:
#   S110 — try/except/pass
#   S112 — try/except/continue
# Every caught exception must at least be logged or surfaced, never dropped on
# the floor. A handler that genuinely needs to swallow must log (debug for
# expected/benign, warning+ for error-hiding) — see the silent-exception
# discipline applied across src/agentm. Suppress with an explicit
# ``# noqa: S110`` + reason only when logging is truly impossible.
extend-select = ["S110", "S112"]

[tool.mypy]
python_version = "3.12"
mypy_path = ["src", "contrib/evals/rescue_window/src", "contrib/scenarios/rca/src", "contrib/extensions/llmharness/src"]
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
exclude = [
    "^contrib/extensions/llmharness/",
    "^contrib/scenarios/rca/",
    "^contrib/scenarios/rca/",
]

[[tool.mypy.overrides]]
module = ["rcabench_platform", "rcabench_platform.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sqlmodel", "sqlmodel.*"]
ignore_missing_imports = true
