[project]
name = "agentm"
version = "0.2.5"
description = "AgentM SDK"
readme = "README.md"
authors = [{ name = "Aoyang Fang", email = "aoyangfang@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "loguru>=0.7",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
    "python-frontmatter>=1.3.0",
    "textual[syntax]>=2.0",
]

[project.optional-dependencies]
provider-openai = [
    "httpx>=0.28.0",
    "openai>=1.50.0",
]
provider-anthropic = [
    "anthropic>=0.86.0",
    "httpx>=0.28.0",
]
observability-otel = [
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp>=1.30.0",
]
tokenizer = [
    "tiktoken>=0.12.0",
]
storage-postgres = [
    "psycopg[binary]>=3.2.0",
]
storage-clickhouse = [
    "clickhouse-connect>=0.7.0",
]
packaged-minimal = [
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp>=1.30.0",
    "tiktoken>=0.12.0",
]
harbor = [
    "agentm-harbor",
    "arl-env>=0.21.4",
    "dockerfile-parse",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "mypy>=1.0",
    "ruff>=0.4",
]

[project.scripts]
agentm = "agentm.cli:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
agentm-harbor = { workspace = true }

[tool.uv.workspace]
members = [
    "contrib/extensions/policy",
    "contrib/scenarios/harbor",
]

[tool.pytest.ini_options]
markers = [
    "slow: tests that may run for many minutes (real-LLM E2E)",
    "requires_api_key: tests that hit a real LLM provider; skipped without env",
]
testpaths = ["tests"]
addopts = ""
norecursedirs = ["*.egg", ".*", "_darcs", "build", "CVS", "dist", "node_modules", "venv", "{arch}", "runs", "jobs"]

[tool.ruff.lint]
# Default rule set (E/F) plus high-signal correctness guards:
#   S110 — try/except/pass
#   S112 — try/except/continue
#   B007 — unused loop control variables
#   B905 — zip calls whose truncation policy is implicit
#   RUF006 — asyncio tasks created without retaining a reference
# Every caught exception must at least be logged or surfaced, never dropped on
# the floor. A handler that genuinely needs to swallow must log (debug for
# expected/benign, warning+ for error-hiding) — see the silent-exception
# discipline applied across src/agentm. Suppress with an explicit
# ``# noqa: S110`` + reason only when logging is truly impossible.
extend-select = ["B007", "B905", "RUF006", "S110", "S112"]

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sqlmodel", "sqlmodel.*"]
ignore_missing_imports = true
