[project]
name = "agentm-channels"
version = "0.1.0"
description = "Chat-channel gateway for AgentM — Feishu / Slack / Discord / etc. drivers behind a single message bus."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "AgentM contributors" }]
# `agentm` is supplied by the parent workspace (path install) and intentionally
# omitted here. lark-oapi is required for the bundled Feishu channel; future
# channel modules pull their own per-vendor SDKs as direct deps too — keeping
# them here means `agentm-gateway` works out of the box after `uv sync`.
dependencies = [
    "pyyaml>=6",
    "python-dotenv>=1.0",
    "lark-oapi>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
agentm-gateway = "agentm_channels.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentm_channels"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
