[project]
name = "agentm-channels"
version = "0.1.0"
description = "Chat-channel gateway for AgentM — Feishu / Slack / Discord / etc. drivers behind a single message bus."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "AgentM contributors" }]
# `agentm` is supplied by the parent workspace (path install) and intentionally
# omitted here. Per-vendor SDKs (lark-oapi, slack-sdk, …) used to live here
# when channels ran in-process; as of Phase 3 they belong to the extracted
# client packages (`agentm-feishu`, …) so the gateway image stays vendor-
# agnostic. The legacy in-process `FeishuChannel` is kept for backwards
# compatibility but emits a DeprecationWarning and imports lark_oapi lazily,
# so it no longer needs to appear here.
dependencies = [
    "pyyaml>=6",
    "python-dotenv>=1.0",
    "typer>=0.25.1",
    "websockets>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
agentm-gateway = "agentm_channels.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentm_channels"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
