[project]
name = "agentm-eval"
version = "0.1.0"
description = "Unified evaluation framework for AgentM benchmarks"
requires-python = ">=3.12"
dependencies = [
    "agentm",
    "typer>=0.25.1",
    "loguru>=0.7",
]

[project.optional-dependencies]
sandbox = ["arl-env>=0.19.8", "pyyaml>=6.0"]
aftraj = ["pandas>=2.0", "llmharness", "trajectory-index"]
tau2 = [
    "litellm>=1.80.15",
    "addict>=2.4.0",
    "toml>=0.10.2",
    "docstring-parser>=0.16",
    "deepdiff>=8.4.2",
    "tabulate>=0.9.0",
]
telbench = ["llmharness"]
rescue-window = ["agentm-rescue-window"]
all = [
    "agentm-eval[sandbox]",
    "agentm-eval[aftraj]",
    "agentm-eval[tau2]",
    "agentm-eval[telbench]",
    "agentm-eval[rescue-window]",
]

[project.scripts]
agentm-eval = "agentm_eval.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentm_eval"]
