[project]
name = "agentm-eval"
version = "0.1.0"
description = "Unified evaluation framework for AgentM benchmarks"
requires-python = ">=3.12"
dependencies = [
    "agentm",
    "typer>=0.25.1",
    "loguru>=0.7",
]

[project.optional-dependencies]
sandbox = ["arl-env>=0.19.8", "pyyaml>=6.0"]
aftraj = ["pandas>=2.0", "llmharness", "trajectory-index"]
tau2 = [
    "litellm>=1.80.15",
    "addict>=2.4.0",
    "toml>=0.10.2",
    "docstring-parser>=0.16",
    "deepdiff>=8.4.2",
    "tabulate>=0.9.0",
]
telbench = ["llmharness"]
rescue-window = ["pyyaml>=6.0"]
rca = [
    "rcabench-platform[sdk,llm-eval]>=0.4.44",
    "fpg>=0.1.0",
    "duckdb>=1.4.4",
]
rca-evolution = ["agentm-eval[rca]"]
all = [
    "agentm-eval[sandbox]",
    "agentm-eval[aftraj]",
    "agentm-eval[tau2]",
    "agentm-eval[telbench]",
    "agentm-eval[rescue-window]",
    "agentm-eval[rca]",
    "agentm-eval[rca-evolution]",
]

[project.entry-points."llm_eval.agents"]
agentm = "agentm_eval.benchmarks.rca.agent:AgentMAgent"

[project.scripts]
agentm-eval = "agentm_eval.cli:main"
telbench-eval = "agentm_eval.benchmarks.telbench.cli:main"
telbench-evolve = "agentm_eval.benchmarks.telbench.evolve:main"
telbench-iterate = "agentm_eval.benchmarks.telbench.iterate:main"
agentm-aggregate = "agentm_eval.aggregate.cli:main"
rca-evolution = "agentm_eval.benchmarks.rca_evolution.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
fpg = { git = "https://github.com/Lincyaw/fpg-convention" }

[tool.hatch.build.targets.wheel]
packages = ["src/agentm_eval"]
