[project]
name = "llmharness"
version = "0.1.0"
description = "LLM-as-harness for Claude Code: async, non-blocking process supervision via PostToolUse + UserPromptSubmit hooks; AgentM-backed event summarizer and drift reasoner."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "rca-autorl" }]
dependencies = ["typer>=0.12"]

[project.scripts]
llmharness = "llmharness.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llmharness"]

# ---------------------------------------------------------------------------
# Lint + format: ruff (single tool)
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle + pyflakes
  "I",              # isort
  "B",              # bugbear
  "UP",             # pyupgrade
  "SIM",            # simplify
  "RUF",            # ruff-specific
]
ignore = [
  "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Types: mypy (strict on src)
[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/llmharness"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ---------------------------------------------------------------------------
# Tests: pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]
