[project]
name = "agentm-feishu"
version = "0.1.0"
description = "Feishu / Lark client process for the AgentM channels gateway."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "AgentM contributors" }]
# Depends on the in-tree `agentm-channels` for the wire protocol +
# WireClient. The lark_oapi runtime dep moved here from `agentm-channels`
# as part of the Phase 3 gateway/client split — only the Feishu client
# process needs the vendor SDK now.
dependencies = [
    "agentm-channels",
    "lark-oapi>=1.6",
    "python-dotenv>=1.0",
    "typer>=0.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
agentm-feishu = "agentm_feishu.cli:main"

[project.entry-points."agentm.subcommands"]
feishu = "agentm_feishu.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentm_feishu"]

[tool.uv.sources]
agentm-channels = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
