[project]
name = "agentm-terminal"
version = "0.1.0"
description = "Terminal (stdin/stdout) client process for the AgentM channels gateway."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "AgentM contributors" }]
# Depends on the in-tree `agentm-channels` for the wire protocol +
# WireClient. The dependency is wired via the workspace `[tool.uv.sources]`
# entry in the repo root pyproject.toml; nothing extra is needed at
# install time beyond `uv sync`.
dependencies = [
    "agentm-channels",
    # Drives the `--format textual` rich frontend (the legacy in-process
    # TUI lived under src/agentm/modes/ — moved here in the
    # session-as-routing-primary refactor). Pulls Rich transitively.
    "textual>=0.85",
    "typer>=0.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
agentm-terminal = "agentm_terminal.cli:main"

[project.entry-points."agentm.subcommands"]
terminal = "agentm_terminal.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentm_terminal"]

[tool.uv.sources]
agentm-channels = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
