[project]
name = "agentm-worker"
version = "0.1.0"
description = "Agent-side worker process for the AgentM channels gateway (Phase 5a)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "AgentM contributors" }]
# Depends on the in-tree ``agentm`` SDK (AgentSession) and
# ``agentm-channels`` (wire client + bus). Both via workspace sources.
dependencies = [
    "agentm",
    "agentm-channels",
    "typer>=0.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
agentm-worker = "agentm_worker.cli:main"

[project.entry-points."agentm.subcommands"]
worker = "agentm_worker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentm_worker"]

[tool.uv.sources]
agentm = { workspace = true }
agentm-channels = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
