[project]
name = "agentm-feishu-channel"
version = "0.1.0"
description = "Feishu / Lark gateway channel for AgentM — long-running daemon that drives AgentSession from a Feishu chat."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "AgentM contributors" }]
# `agentm` is supplied by the parent workspace (path install) and intentionally
# omitted here. `lark-oapi` is an optional dep — install via the `feishu` extra
# when wiring against a real Feishu app; the test path uses the in-memory stub
# source and does not need it.
dependencies = [
    "pyyaml>=6",
]

[project.optional-dependencies]
feishu = [
    "lark-oapi>=1.4",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
agentm-feishu-gateway = "agentm_feishu.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentm_feishu"]
