[project]
name = "agentm-rescue-window"
version = "0.1.0"
description = "Generic rescue-window branching experiments for AgentM sessions"
requires-python = ">=3.12"
dependencies = [
    "agentm",
    "pyyaml>=6.0",
    "typer>=0.25.1",
]

[project.optional-dependencies]
llmharness = ["llmharness"]
rca = ["rca-scenario"]

[project.scripts]
rescue-window = "rescue_window.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rescue_window"]
