[project]
name = "llmharness"
version = "0.3.0"
description = "LLM-as-harness: cognitive-audit AgentM extension that supervises a running main agent via TurnEndEvent → child diagnostic session → BeforeAgentStart reminder injection."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "rca-autorl" }]
# ``pyyaml`` is the only third-party runtime import outside the AgentM
# workspace (used by ``audit.cards`` for card-corpus loading). ``agentm``
# is consumed by ``adapters/agentm.py`` but is supplied by the parent
# AgentM workspace at install time (path-installed by rca-autorl) rather
# than as a PyPI dependency, so it is intentionally not listed here.
dependencies = [
  "pyyaml>=6",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.scripts]
llmharness = "llmharness.cli:main"
llmharness-replay = "llmharness.replay.cli:main"
llmharness-distill = "llmharness.distill.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# AFC card YAMLs live at src/llmharness/_cards_data/; hatch's default
# behaviour ships every file under the listed package directory, so the
# corpus is reachable via importlib.resources after pip install.
packages = ["src/llmharness"]

# ---------------------------------------------------------------------------
# Lint + format: ruff (single tool)
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle + pyflakes
  "I",              # isort
  "B",              # bugbear
  "UP",             # pyupgrade
  "SIM",            # simplify
  "RUF",            # ruff-specific
]
ignore = [
  "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Types: mypy (strict on src)
[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/llmharness"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ``agentm`` is the parent workspace package — not installed into the nested
# project's dev env on its own, but loaded transparently by uv when this
# package runs as a workspace member. Treat its imports as untyped so
# ``mypy`` on this nested project alone stays clean.
[[tool.mypy.overrides]]
module = "agentm.*"
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Tests: pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]
