[project]
name = "agentm-mcp-bridge"
version = "0.1.0"
description = "MCP (Model Context Protocol) client bridge for AgentM — surfaces a remote MCP server's tools as install-time-snapshot AgentM tools."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "AgentM" }]
# ``agentm`` is the parent workspace package (path-installed by uv at the
# repo root); listing it here would create a circular dependency edge, so
# we leave it implicit like the other workspace members do.
dependencies = [
  "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Package files live directly under this directory (no ``src/`` layout)
# because the design pins the import path as ``contrib.extensions.mcp_bridge``.
packages = ["."]

[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "contrib/extensions/mcp_bridge/__init__.py"
"manifest.py" = "contrib/extensions/mcp_bridge/manifest.py"
"bridge.py" = "contrib/extensions/mcp_bridge/bridge.py"
"client.py" = "contrib/extensions/mcp_bridge/client.py"
"tool.py" = "contrib/extensions/mcp_bridge/tool.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra"]
asyncio_mode = "auto"
