[project]
name = "trajectory-index"
version = "0.1.0"
description = "Trajectory semantic index: LLM-powered entity–mention–relation graph over agent trajectories."
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "pydantic>=2.0",
  "loguru>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trajectory_index"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/trajectory_index"]
mypy_path = ["src"]
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "agentm.*"
ignore_missing_imports = true
