[project]
name = "agentm-feishu"
version = "0.2.0"
description = "Feishu / Lark chat-client peer for the AgentM gateway."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "AgentM contributors" }]
# Depends on the in-tree `agentm` SDK for the v2 wire protocol +
# WireClient (agentm.gateway). lark_oapi is the vendor SDK only this peer
# process needs — the gateway image stays vendor-agnostic.
dependencies = [
    "agentm",
    "lark-oapi>=1.6",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "typer>=0.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
agentm-feishu = "agentm_feishu.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentm_feishu"]

[tool.uv.sources]
agentm = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
