[project]
name = "agentm-terminal"
version = "0.2.0"
description = "Terminal (stdin/stdout) chat-client peer for the AgentM gateway."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "AgentM contributors" }]
# Depends on the in-tree `agentm` SDK for the v2 wire protocol +
# WireClient (agentm.gateway). The dependency is wired via the workspace
# `[tool.uv.sources]` entry; nothing extra is needed beyond `uv sync`.
dependencies = [
    "agentm",
    "loguru>=0.7",
    # Drives the `--format textual` rich frontend. Pulls Rich transitively.
    "textual>=0.85",
    "typer>=0.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
agentm-terminal = "agentm_terminal.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentm_terminal"]

[tool.uv.sources]
agentm = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["ui: tests for the Textual TUI rendering layer (opt-in)"]
# TUI render tests are opt-in (run with `-m ui`), matching the repo root.
addopts = "-m 'not ui'"
