[project]
name = "agentm-weixin"
version = "0.1.0"
description = "WeChat (微信) chat-client peer for the AgentM gateway via iLink Bot API."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "AgentM contributors" }]
dependencies = [
    "agentm",
    "aiohttp>=3.9",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "typer>=0.25.1",
    "pycryptodome>=3.20",
    "qrcode>=7.4",
    "supervisor>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
agentm-weixin = "agentm_weixin.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentm_weixin"]

[tool.uv.sources]
agentm = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
