[project]
name = "agentm-devloop"
version = "0.1.0"
description = "DevOps control loop — AgentM workflow template"
requires-python = ">=3.12"
dependencies = ["agentm"]

[project.scripts]
devloop = "workflow.devloop_workflow:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
agentm = { path = "../../..", editable = true }
