[project]
name = "agentm-devloop"
version = "0.1.0"
description = "DevOps control loop — AgentM workflow template"
requires-python = ">=3.12"
dependencies = ["agentm>=0.2.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentm_devloop"]

[tool.hatch.build.targets.wheel.force-include]
"agents" = "agentm_devloop/agents"
"skills" = "agentm_devloop/skills"

[dependency-groups]
dev = []

[tool.uv.sources]
agentm = { path = "../../..", editable = true }
