[project]
name = "agentm-harbor"
version = "0.1.0"
description = "Harbor external agent adapter — AgentM runs locally, tool calls route to Harbor sandbox"
requires-python = ">=3.12"
dependencies = [
    "harbor==0.19.0",
]

[project.optional-dependencies]
external = ["agentm"]

[tool.uv.sources]
agentm = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentm_harbor"]

[tool.hatch.build.targets.wheel.force-include]
"../../../src/agentm_toolbox" = "agentm_toolbox"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
