[project]
name = "agentm-harbor"
version = "0.1.0"
description = "Harbor external agent adapter — AgentM runs locally, tool calls route to Harbor sandbox"
requires-python = ">=3.12"
dependencies = [
    "arl-env>=0.24.0",
    "harbor==0.19.0",
    "policy-engine",
]

[project.optional-dependencies]
external = ["agentm"]

[tool.uv.sources]
agentm = { workspace = true }
policy-engine = { workspace = true, editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentm_harbor"]

[tool.hatch.build.targets.wheel.force-include]
"scenario.yaml" = "agentm_harbor/scenario.yaml"
"base.yaml" = "agentm_harbor/base.yaml"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
