[project]
name = "agentm-paper-review"
version = "0.1.0"
description = "Minimal paper review AgentM workflow"
requires-python = ">=3.12"
dependencies = ["agentm"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentm_paper_review"]

[tool.hatch.build.targets.wheel.force-include]
"agents" = "agentm_paper_review/agents"

[dependency-groups]
dev = []

[tool.uv.sources]
agentm = { path = "../../..", editable = true }
