[project]
name = "rca-scenario"
version = "0.1.0"
description = "RCA scenario for AgentM"
requires-python = ">=3.12"
dependencies = [
    "agentm",
    "duckdb>=1.4.4",
    "pytz>=2025.1",
    "pydantic>=2.11.0",
    "tiktoken>=0.12.0",
    "rcabench-platform[sdk,llm-eval]>=0.4.44",
]

[project.entry-points."llm_eval.agents"]
agentm = "rca_eval.agent:AgentMAgent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rca", "src/rca_eval"]
