[project]
name = "rca-scenario"
version = "0.1.0"
description = "RCA scenario for AgentM"
requires-python = ">=3.12"
dependencies = [
    "agentm",
    "duckdb>=1.4.4",
    "loguru>=0.7",
    "pytz>=2025.1",
    "pydantic>=2.11.0",
    "tiktoken>=0.12.0",
    "fpg>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rca"]

[tool.uv.sources]
fpg = { git = "https://github.com/Lincyaw/fpg-convention" }
agentm-eval = { workspace = true }
